--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -12,4 +12,5 @@
     <string name="settings_language_action">Chuyển sang Tiếng Anh</string>
     <string name="main_appbar_camera">Mở máy ảnh</string>
     <string name="main_appbar_more">Nhiều hơn</string>
+    <string name="main_appbar_more_vault">Bí ẩn</string>
 </resources>
