--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -3,14 +3,19 @@
     <string name="app_name">Hi Gallery</string>
     <string name="main_title">Thư viện</string>
     <string name="settings_title">Cài đặt</string>
+
     <string name="navigation_photos">Ảnh</string>
     <string name="navigation_album">Album</string>
     <string name="navigation_favorite">Yêu thích</string>
+
     <string name="settings_language_title">Ngôn ngữ</string>
     <string name="settings_language_subtitle">Tiếng Việt</string>
     <string name="settings_about_title">Giới thiệu</string>
     <string name="settings_language_action">Chuyển sang Tiếng Anh</string>
+
     <string name="main_appbar_camera">Mở máy ảnh</string>
     <string name="main_appbar_more">Nhiều hơn</string>
     <string name="main_appbar_more_vault">Bí ẩn</string>
+
+    <string name="login_slogan">Chào bạn!</string>
 </resources>
