--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -15,7 +15,10 @@
 
     <string name="main_appbar_camera">Mở máy ảnh</string>
     <string name="main_appbar_more">Nhiều hơn</string>
-    <string name="main_appbar_more_vault">Bí ẩn</string>
+    <string name="main_appbar_more_vault">Bí mật</string>
 
-    <string name="login_slogan">Chào bạn!</string>
+    <string name="login_vault_title">Thư mục bí mật</string>
+    <string name="login_vault_subtitle">Vui lòng nhập mật khẩu.</string>
+    <string name="login_vault_forgot">Quên</string>
+    <string name="login_vault_delete">Xóa</string>
 </resources>
