--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,10 +14,21 @@
     <string name="settings_language_title">Language</string>
     <string name="settings_language_subtitle">English</string>
     <string name="settings_language_action">Switch to Vietnamese</string>
+    <string name="settings_darktheme_title">Dark theme</string>
     <string name="settings_about_title">About</string>
 
     <string name="login_vault_title">Vault Album</string>
     <string name="login_vault_subtitle">Please enter your passcode.</string>
     <string name="login_vault_forgot">Forgot</string>
     <string name="login_vault_delete">Del</string>
+
+    <string name="photo_edit">Edit</string>
+    <string name="photo_details">Details</string>
+    <string name="photo_secure">Add to Vault</string>
+    <string name="photo_set_as">Set as</string>
+    <string name="photo_new_album">New album</string>
+    <string name="photo_share">Share to…</string>
+    <string name="photo_favorite">Favorite</string>
+    <string name="photo_unfavorite">Unfavorite</string>
+    <string name="photo_delete">Delete</string>
 </resources>
