--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -31,4 +31,10 @@
     <string name="photo_favorite">Yêu thích</string>
     <string name="photo_share">Chia sẻ…</string>
     <string name="settings_darktheme_title">Giao diện tối</string>
+    <string name="signup_vault_invalid_email">Email không hợp lệ. Vui lòng nhập lại!</string>
+    <string name="signup_vault_pin_not_match">Mã PIN không khớp. Vui lòng nhập lại!</string>
+    <string name="signup_vault_pin_too_short">Độ dài của mã PIN là 6. Vui lòng nhập lại!</string>
+    <string name="signup_vault_email_exists">Email đã tồn tại. Có lẽ bạn nên khôi phục.</string>
+    <string name="signup_vault_unknown_error">Lỗi không xác định. Vui lòng thử lại!</string>
+    <string name="restore_vault_wrong_pin">Mật khẩu sai. Vui lòng nhập lại!</string>
 </resources>
