Thêm PermissionHelper (fix lỗi xin quyền ở Android 8), sửa hàm load đường dẫn ảnh, reload ảnh khi có sự thay đổi từ bộ nhớ, fix click ảnh, fix padding ảnh, fix nhẹ language

--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -37,4 +37,5 @@
     <string name="signup_vault_email_exists">Email đã tồn tại. Có lẽ bạn nên khôi phục.</string>
     <string name="signup_vault_unknown_error">Lỗi không xác định. Vui lòng thử lại!</string>
     <string name="restore_vault_wrong_pin">Mật khẩu sai. Vui lòng nhập lại!</string>
+    <string name="permission_title">Cần được cấp quyền!</string>
 </resources>
