--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -37,7 +37,6 @@
     <string name="signup_vault_email_exists">Email đã tồn tại. Có lẽ bạn nên khôi phục.</string>
     <string name="signup_vault_unknown_error">Lỗi không xác định. Vui lòng thử lại!</string>
     <string name="restore_vault_wrong_pin">Mật khẩu sai. Vui lòng nhập lại!</string>
-    <string name="permission_title">Cần được cấp quyền!</string>
 
     <string name="photo_details_name">Tên:</string>
     <string name="photo_details_size">Kích thước:</string>
@@ -45,5 +44,8 @@
     <string name="photo_details_resolution">Độ phân giải:</string>
     <string name="photo_details_last_modified">Lần sửa cuối cùng:</string>
     <string name="photo_details_close">Đóng</string>
+    <string name="trash_delete_all">Xóa Tất cả</string>
+    <string name="trash_restore_all">Khôi phục Tất cả</string>
+    <string name="trash_title">Thùng rác</string>
 
 </resources>
