--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -62,5 +62,25 @@
 
     <string name="dialog_vault_close_btn_title">Hủy</string>
     <string name="dialog_vault_reset_btn_title">Xác nhận</string>
+    <string name="edit_filters_tooltip">Bộ lọc</string>
+    <string name="edit_rotate_tooltip">Xoay</string>
+    <string name="edit_flip_tooltip">Lật</string>
+    <string name="edit_black_and_white_tooltip">Trắng đen</string>
+    <string name="edit_negative_tooltip">Âm bản</string>
+    <string name="edit_brightness_tooltip">Độ sáng</string>
+    <string name="edit_temperature_tooltip">Nhiệt độ</string>
+    <string name="edit_increase_tooltip">Tăng</string>
+    <string name="edit_decrease_tooltip">Giảm</string>
+    <string name="edit_left_rotate_tooltip">Xoay trái</string>
+    <string name="edit_right_rotate_tooltip">Xoay phải</string>
+    <string name="edit_custom_rotate_tooltip">Tùy chỉnh</string>
+    <string name="edit_done_custom_rotate_tooltip">Xong</string>
+    <string name="edit_horizontal_flip_tooltip">Lật dọc</string>
+    <string name="edit_vertical_flip_tooltip">Lật ngang</string>
+    <string name="edit_back_message_dialog">Ảnh chưa được lưu, bạn muốn lưu ảnh lại không?</string>
+    <string name="edit_save_message_dialog">Lưu ảnh hiện tại vào thư viện?</string>
+    <string name="edit_yes_dialog">CÓ</string>
+    <string name="edit_no_dialog">KHÔNG</string>
+    <string name="edit_cancel_dialog">HỦY</string>
 
 </resources>
