--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,30 @@
     <string name="trash_delete_all">Delete All</string>
     <string name="trash_restore_all">Restore All</string>
 
+
+    <string name="edit_save_message_dialog">Do you want to save this image to the gallery?</string>
+    <string name="edit_back_message_dialog">The image has not been saved, do you want to save it?</string>
+    <string name="edit_yes_dialog">YES</string>
+    <string name="edit_no_dialog">NO</string>
+    <string name="edit_cancel_dialog">CANCEL</string>
+
+    <string name="edit_filters_tooltip">Filters</string>
+    <string name="edit_rotate_tooltip">Rotate</string>
+    <string name="edit_flip_tooltip">Flip</string>
+
+    <string name="edit_black_and_white_tooltip">B&amp;W</string>
+    <string name="edit_negative_tooltip">Negative</string>
+    <string name="edit_brightness_tooltip">Negative</string>
+    <string name="edit_temperature_tooltip">Negative</string>
+
+    <string name="edit_increase_tooltip">Increase</string>
+    <string name="edit_decrease_tooltip">Decrease</string>
+
+    <string name="edit_left_rotate_tooltip">Rotate left</string>
+    <string name="edit_right_rotate_tooltip">Rotate right</string>
+    <string name="edit_custom_rotate_tooltip">Custom</string>
+    <string name="edit_done_custom_rotate_tooltip">Done</string>
+
+    <string name="edit_horizontal_flip_tooltip">Horizontal</string>
+    <string name="edit_vertical_flip_tooltip">Vertical</string>
 </resources>
