--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -15,7 +15,7 @@
     <string name="settings_language_action">Chuyển sang Tiếng Anh</string>
 
     <string name="main_appbar_camera">Mở máy ảnh</string>
-    <string name="main_appbar_more_vault">Bí mật</string>
+    <string name="main_appbar_vault">Bí mật</string>
 
     <string name="login_vault_title">Thư mục bí mật</string>
     <string name="login_vault_subtitle">Vui lòng nhập mật khẩu.</string>
