Đổi icon launcher

--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Hi Gallery</string>
-    <string name="main_title">Thư viện</string>
+    <string name="main_title">Thư viện Hi</string>
     <string name="settings_title">Cài đặt</string>
     <string name="vault_title">Thư mục bí mật</string>
 
