--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Hi Gallery</string>
-    <string name="main_title">Gallery</string>
+    <string name="main_title">Hi Gallery</string>
     <string name="settings_title">Settings</string>
     <string name="vault_title">Vault Album</string>
     <string name="trash_title">Trash</string>
