--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -102,5 +102,6 @@
     <string name="login_vault_forgot_message">Đã gửi email chứa link reset mã PIN!</string>
     <string name="edit_save_action_dialog">LƯU</string>
     <string name="edit_save_new_action_dialog">LƯU MỚI</string>
+    <string name="main_appbar_new_album_selected">Album mới</string>
 
 </resources>
