--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -109,4 +109,5 @@
     <string name="settings_grid_type_menu_1">6 cột</string>
     <string name="settings_grid_type_menu_2">8 cột</string>
 
+    <string name="photo_slideshow">Trình diễn</string>
 </resources>
