Thêm API bổ sung cho GetInsta, fix trash

--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -126,4 +126,5 @@
     <string name="get_insta_toast_downloading">Đang tải…</string>
     <string name="get_insta_toast_saved">Đã lưu:</string>
     <string name="get_insta_toast_failed">Thất bại!</string>
+    <string name="get_insta_empty">Xin lỗi! Hiện tại không thể truy cập hình ảnh.</string>
 </resources>
